--- a/admin/public/index.html
+++ b/admin/public/index.html
@@ -21,7 +21,7 @@
       href="https://fonts.googleapis.com/css2?family=Libre+Baskerville&display=swap"
       rel="stylesheet"
     />
-    <title>Karina's CakeHouse</title>
+    <title>Karina's CakeHouse Admin Panel</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
